src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  MailingPostalCode  &lt;&gt;  Account.ShippingPostalCode, 
  NOT( ISBLANK(AccountId))
)</errorConditionFormula>
        <errorMessage>Contact Mailing Postal Code can not match the related account Shipping Postal Code</errorMessage>
    </validationRules>
</CustomObject>